<resources>
    <string name="app_name">Pratikraman</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_path">Path</string>
    <string name="title_activity_tp">tp</string>
    <string name="title_activity_expanded_navigation_drawer"></string>
    <string name="part_1">Vandana</string>
    <string name="part_2">Samayik</string>
    <string name="part_3">Pratikraman Ki Agyya</string>
    <string name="part_4">Koussag</string>
    <string name="part_5">Pratyakyhan</string>
    <string name="part_6">Chovisattva</string>
    <string name="part_7">Shraman Sutra</string>
    <string name="part_8">Bhav Vandana</string>
    <string name="title_eng_navkar_mantra">Navkar Mantra</string>
    <string name="title_eng_Tikkhuto">Tikkhuto Ka Path(3 times)</string>
    <string name="title_eng_dhyan">4 Dhyan Ka Path</string>
    <string name="title_eng_Tassauttari">Tassa Uttari Ka Path</string>
    <string name="title_eng_Logassa">Logassa Ka Path</string>
    <string name="title_eng_KaremiBhante">Karemi Bhante Ka Path</string>
    <string name="title_eng_Nammotthunam">Nammotthunam Ka Path</string>
    <string name="title_eng_EyassaNavamassa">Eyassa Navamassa Ka Path</string>
    <string name="title_eng_Irrayavahia">Iriyavahi Ka Path</string>
    <string name="title_eng_Tein">Teen Tatva Ka Path</string>
    <string name="title_eng_GuruGun">Guru Gun Ka Path</string>
    <string name="text_eng_navkar_mantra">Namo Arihantanam,\nNamo Siddanam,\nNamo Aayariyanam,\nNamo Uvajjhayanam,\nNamo Loe Savva-sahunam,\nEso Panch Namokkaro,\nSavva-pava ppanasano \nManglanam cha savvesim\nPadhamamHavai Mangalam.
   \n\n\n\n\n </string>
    <string name="text_eng_Tikkhuto">
        (3 baar Saviddhi bole)
        Tikkhuto, Ayahinam,\n
Payahinam, Karemi,\n
Vandami, Namamsami,\n
Sakkaremi, Sammanemi,\n
Kallanam, Mangalam,\n
Devyam, Cheiyam,\n
Pajjuvasami,\n
Mathhen Vandami.\n\n\n\n\n\n
</string>
    <string name="text_eng_Iriyavahia">
        Ichchha&#45; Karenam Sandisaha Bhagavan&#33; Iriyavahiyam Paddikkamami
Ichchham Ichchami Padikkamium&#33; Iriyavahiyae Virahanae, Gamanagamane,
Panakkamane, Biyakkamane, Hariyakkamane, Osa, Uttinga, Panaga, Daga, Matti,
Makkada, Santana, Sankamane, Je me jivavirahiya, Egindiya, Beindiya, Teindiya, Chaurindiya,
Panchindiya Abihaya, Vattiya, Lesiya, Sanghaiya, Sanghattiya, Pariyaviya, Kilamiya, Uddaviya,
Thanao-Thanam, Sankamiya Jiviyao&#45; Vavaroviya, Tassa Micchhami Dukkadam.\n\n\n\n\n
    </string>
    <string name="text_eng_Tassauttari">
        Tassauttarikaranenam payacchitta&#45; karanenam, visohi&#45; karanenam, visalli&#45; karanenam
Pavanam, kammanam, Nigghayanatthae Thami Kaussaggam. Annattha Usasienam, Neesasienam,
Khasienam, Chienam, Jambhaienam, Udduenam, Vay&#45; nisaggenam, Bhamalie, Pitta&#45; muchhae, Suhumehim
Anga&#45; sanchalehim, Suhumehim Khel&#45; sanchalehim, Suhumehim Ditthi&#45; sanchalehim, Evamaiehim,
Agarehim, Abhaggo, Avirahio, Hujja Me Kaussaggo Java Arihantanam, Bhagavantanam, Namokkarenam,
NaParemi TavaKayam Thanenam, Monenam, Jhanenam, Appanam Vosirami.\n\n\n\n\n
</string>
    <string name="text_eng_Logassa">
        Logassa Ujjoya&#45; gare Dhamma&#45; Tittha&#45; Yare jine,\n
Arihante Kittaissam Chauvisampi Kevali &#40;1&#41; \n\n
Usabhamajiyam Cha Vande, Sambhavamabhinandanam Cha\n
Sumaim Cha Paumappaham Supasam Jinam Cha Chandappaham Vande &#40;2&#41;\n\n
Suvihim Cha Puffhadantam Siyal Sijjansa Vasu&#45; pujjamCha\n
Vimalmanantam Cha Jinam, Dhammam Santim Cha Vandami &#40;3&#41;\n\n
Kunthum Aram Cha Mallim Vande Muni&#45; suvvayamNami&#45; jinam Cha.\n
VandamiRittha&#45; nemim Pasamtah Vaddhamanam Cha &#40;4&#41;\n\n
Evam Mae Abhithua, Vihuyarayamala Pahinjarmarana\n
ChauVisam Pi jinavara, Titthayara Me Pasiyantu &#40;5&#41;\n\n
Kittiya&#45; vandiy&#45; mahiya, Je ea Logassa Uttama Siddha.\n
Arugga&#45; Bohi&#45; labham, Samahi&#45; Vara&#45; Muttamam&#45; dintu &#40;6&#41;\n\n
Chandesu Nimmalayara Aichhesu Ahiyam Payasayara.\n
Sagarvargambhira Siddha Siddhim Mam Disantu &#40;7&#41;\n\n\n\n\n\n\n

</string>
    <string name="text_eng_KaremiBhante">Karemi Bhante &#33; Samaiyam, Savajjam Jogam Pachhakkhami Jav Niyamam Pajjuvasami, Duviham
Tivihenam Na Karemi, Na Karvemi Mansa, Vaysa, Kaysa Tass Bhante&#33; Pdikkamami
Nindami Garihami Appanam Vosirami.\n\n\n\n\n

</string>
    <string name="text_eng_Nammotthunam">
        Namotthunam Arihantanam, Bhagavantanam, Aaigaranam, Titthayaranam, SayamSambuddhanam,
Purisuttamanam, Purisasihanam, Purisavar Pundarianam, Purisavar Gandhahatthinam,
Loguttamanam, Loganahanam, Logahiyanam, Logapaivanam, Lohpajjoyagaranam, Abhaydayanam,
Chakkudayanam, Maggadayanam, Sarandayanam, Jeevdayanam, Bohidayanam, Dhammadayanam,
Dhammadesayanam, Dhammnayaganam, Dhammsarahinam, Dhammavarchauranta
Chakkavattinam, Divottanam, Sarangaipaitthanam Appadihayavaranana Dansana Dharanam,
Viyatta chaumanam, Jinanam Javayanam, Tinnanam Taryanam, Buddhanam Bohayanam,
Muttanam Moyganam Savvannunam Savvadarisinam SivamayalmaruaManantaMakkhay
MavvabahMapunaravitti, SiddhigaiNamadheyam, ThanamSampattanam, Namo Jinanam Jiy bhayanam.\n
            <strong>
&#40;2re mai&#41;</strong>\n

Thanam Sampaviukamanam,Namo Jinanam Jiy-bhayanam.
Namotthunam \n <strong>&#40;3re mai &#41;</strong>\n

Namotthunam mam dhammayariyass dhammovdesyassa Aneggunsanjuttass java sampaviu kamass.\n\n\n\n\n

</string>
    <string name="text_eng_EyassaNavamassa">Eyassa Navamassa Samaiya Vayassa Pancha Aiyara Janiyavva Na Samayariyavva Tamjaha Te Alou&#45;
Manaduppanihane, Vayaduppanihane, Kayaduppanihane, Samaiyassa Sai Akaranayae, Samaiyassa
AnavatthiyassaKaranyae Tass Michhami Dukkadam.\n\n
Samaiyam Sammam Kayenam Na Phasiyam, Na Paliyam, Na Sohiyam, Na Teeriyam, Na Kittiyam,
Na Arahiyam, Anaye Anupaliyam Na Bhavai Tass Micchami Dukkadam.\n\n
Paddikkamami Aaharasanna, Bhayasanna, Mehunasanna, PariggahaSanna aeya chu Sanna kaya Tass Micchami Dukkadam.\n\n
Paddikkamami chaunham Vikaha Ithikaha/ puriskaha, bhattkaha, Deskaha, raykaha aeya chu Vikaha kaya Tass Micchami Dukkadam.\n\n
Aekkamane Vaekkamane Aeyaare Anayaare jo mein devsio aeyaaro kao Tass Micchami Dukkadam.\n\n
Samaea Manso Das Dosa Vayanassa Das Dosa, Sarirassa Duvalassa Dosa kaya Tass Micchami Dukkadam.\n\n\n\n\n\n
</string>
    <string name="text_eng_dhyan">Dhyan mai man, vachan, kaaya chalet hua ho,
Aartdhyan, Raudradhyan dhyaya ho Dharma Dhyan Shukla Dhyan nahi dhyaya ho, to Tassa Micchhami Dukkadam.\n\n\n\n\n
</string>
    <string name="text_eng_Tein">Arihanto Mahadevo, Javajjivam Susahuno Guruno
Jinapanattam Tattam, ea Sammatam maye Gahiyam.\n\n\n\n\n
</string>
    <string name="text_eng_GuruGun">Panchendiy Savarno taha navaviha Bambhacher Guttidharo\nChuvih Kasaymukko, ea Attharas Gunehim Sanjutto\n
Panch Mahavvaya Jutto, Panch Vihayar Palan Samttho\n
Panch Samie Tigutto, Chattis Guno Guru Majjha\n\n\n\n\n
    </string>
<string name="text_chauvisathav_ka_path">
    Shree Mahaveer Swami, Simandhar Swami, Guruguruniji m. s.  aapase Chauvisathav karne ki aadnyaa leta / leti hu.
    </string>
    <string name="text_devsi_pratikraman_ki_agya">
        Shree Mahaveer Swami, Simandhar Swami, Guruguruniji m. s.  aapase devasi/
        raysi pratikraman karne ki  aadnyaa leta / leti hu.
    </string>
    <string name="text_ichhaminam_bhante_ka_path">
Ichhaminam Bhante! Tubbhehim Abbanunnaye Samane Devasiyam Padikkamanam Thayemi
        Devasiya-Nana-Dansana Charittacharitta Tav Aiyar-Chintanatham Karemi Kaussaggam.
    </string>
    <string name="text_pratham_avashyak_ki_aadnyaa">
	( Khade hokar) Shree Mahaveer Swami, Simandhar Swami, Guruguruniji m.s. aapase Pratham Avashyak  ki  aadnyaa leta/leti hu
    </string>
    <string name="text_ichhami_thami_ka_path">
        Ichhami Thami Kaussaggam Jo Me Devasio Aaiyaro Kao, Kaio, Vaio, Manasio, Ussutto, Ummaggo, Akappo, Akarnijjo, Dujjhao, Duvvichintio,
        Anayaro, Anichhiyavvo, Asavag Pauggo, Nane Tah Dansane, Charittacharitte, Sue, Samaiye, Tinham Guttinam, Chaunham Kasayanam,
        Panchanham Anuvayanam Tinham
        Gunvayanam, Chaunham Sikkhavayanam, Baras Vihass Savag Dhammass Jam Khandiyam, Jam Virahiyam, Tass Michhami Dukkadam.\n\n\n\n\n
    </string>
    <string name="text_ichhami_thami_padikmevu_ka_path">
         Ichhami Thami Padikamevu Jo Me Devasio Aaiyaro Kao, Kaio, Vaio, Manasio, Ussutto, Ummaggo, Akappo, Akarnijjo, Dujjhao, Duvvichintio,
        Anayaro, Anichhiyavvo, Asavag Pauggo, Nane Tah Dansane, Charittacharitte, Sue, Samaiye, Tinham Guttinam, Chaunham Kasayanam,
        Panchanham Anuvayanam Tinham
        Gunvayanam, Chaunham Sikkhavayanam, Baras Vihass Savag Dhammass Jam Khandiyam, Jam Virahiyam, Tass Michhami Dukkadam.\n\n\n\n\n
        </string>
    <string name="text_kayotsarg_instruction">
        ( \'Appanam Osrami \'kehte hi Kayotsarg Mudra mai baithe. )( Kayotsarg mai micchami dukkadam na bole )
    </string>
    <string name="text_dnyan_ke_atichar_ka_path">
Agame Tivihe Pannatte Tamjaha Suttagame, Atthagame, Tadubhayagame, Is Tarah Teen Prakar Ke Agamrup Gyan Ke Vishay Me Jo Koi Atichar
        Laga Ho To Aloum,  Jam Vaiddham, Vachhameliyam, Heenakkharam, Achhakkharam, Payheenam, Vinayheenam, Jogheenam, Ghosaheenam,
        Sutthudinnam, Dutthupadichhiyam, Akale Kao Sajjhao, Kale Na Kao Sajjhao, Asajjhaye Sajjhaiyam, Sajjhaye Na Sajjhaiyam, Bhanta,
        Gunta,
        Vicharta, Gyan Aur Gyanvant Purusho Ki Avinay Ashatna Ki Ho.
        \n\n\n\n\n
    </string>
    <string name="text_dnyan_ke_atichar_ka_path_with_micchami_dukdaam">
        Agame Tivihe Pannatte Tamjaha Suttagame, Atthagame, Tadubhayagame, Is Tarah Teen Prakar Ke Agamrup Gyan Ke Vishay Me Jo Koi Atichar
        Laga Ho To Aloum,  Jam Vaiddham, Vachhameliyam, Heenakkharam, Achhakkharam, Payheenam, Vinayheenam, Jogheenam, Ghosaheenam,
        Sutthudinnam, Dutthupadichhiyam, Akale Kao Sajjhao, Kale Na Kao Sajjhao, Asajjhaye Sajjhaiyam, Sajjhaye Na Sajjhaiyam, Bhanta,
        Gunta,
        Vicharta, Gyan Aur Gyanvant Purusho Ki Avinay Ashatna Ki Ho To Jo Me Devasio Aiyaro Kao Tass Michhami Dukkadam.
        \n\n\n\n\n
        </string>
    <string name="text_darshan_samyaktva_ka_path">
        Arihanto Mah Devo, Javjjivam Susahuno Guruno\n
Jinapannattam Tattam, Ea Sammattam Maye Gahiyam ।।1।।\n
 Parmatth Santhavo Va, Sudittha Parmattha Sevana Va Vi ।\n
 Vavanna Kudansana Vajjana, Ya Sammatta Saddahana ।।2।।\n
 Ea Sammattassa Panch Aiyara Peyala Janiyavva Na Samayariyavva Tamjaha Te Aloum-Sanka, Kankha, Vitigichha, Parpasand Pasansa,
        Parpasand Santhavo-Is Prakar Shri Samkit Ratna Padarth Ke Vishay Me Jo Koi Atichar Laga Ho To Aloum-\n
1. Shri Jin Vachan Saccha kar, shraddha  na ho, Prateetya na ho \n
 2. Pardarshan Ki Akanksha Ki Ho \n
3 . Par-pakhandi Ki Prashansa Ki Ho \n
4. Par-pakhandi Ka Parichay Kiya Ho, \n
5. Dharm Ke Phal Me Sandeh Kiya Ho, Mere Samyaktva Roop Ratna Par Mithyatva Roopi Raj Mail Laga Ho.\n\n\n\n\n
    </string>
    <string name="text_pehla_sthool">
Pranatipat  Virman Vrat Ke Vishay Me Jo Koi Atichar Laga Ho To Aloum - \n
        1. Rosh Vash Gadha Bandhan Bandha Ho, \n
        2. Gadha Ghav Ghala Ho,\n3. Avyav Ka Chedan Kiya Ho, \n4. Adhik Bhar Bhara Ho, \n5. Bhat Pani Ka Vichhed Kiya Ho.
        \n\n\n\n\n
    </string>
    <string name="chauvisatthav">
        Chauvisatthav
    </string>
    <string name="pratikaman_ki_aadnya">
        Pratikraman ki aadnya
    </string>
    <string name="samayik">
        Samayik
    </string>
    <string name="chaturvishatistav">
        Chaturvishatistav
    </string>
    <string name="vandna">
        Vandana
    </string>
    <string name="pratikaman">
        Pratikraman
    </string>
    <string name="kayotsarg">
        Kayotsarg
    </string>
    <string name="pratyakhyan">
        Pratyakhyan
    </string>
</resources>