<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_part_1"
            android:title="@string/chauvisatthav" />
        <item
            android:id="@+id/nav_part_2"
            android:title="@string/pratikaman_ki_aadnya" />
        <item
            android:id="@+id/nav_part_3"
            android:title="@string/samayik" />
        <item
            android:id="@+id/nav_part_4"
            android:title="@string/chaturvishatistav" />
        <item
            android:id="@+id/nav_part_5"
            android:title="@string/vandna" />
        <item
            android:id="@+id/nav_part_6"
            android:title="@string/pratikaman" />
        <item
            android:id="@+id/nav_part_7"
            android:title="@string/kayotsarg" />
        <item
            android:id="@+id/nav_part_8"
            android:title="@string/pratyakhyan" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
